# 313ff744e86b92491bc16a84a7432558e43cbe39402a689339685c4fb16a0a02_ev_recommender

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  readme.md
data/gold/: electric_vehicles_one_hot_encoded.csv
data/silver/: electric_vehicles_preprocessed.csv
deploy/airflow/dags/: ml_pipeline_dag.py
deploy/docker/: Dockerfile
src/: data_preprocessing.ipynb  data_preprocessing.py  evaluation.py  feature_engineering.py  model_training.py  run_pipeline.py
