[project]
name = "EV_Recommender"
version = "0.1.0"
description = "Recommend an electric vehicle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask<2.3",
    "werkzeug<3.0",
    "apache-airflow>=3.0.3",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.7.0",
    "psycopg2-binary>=2.9.9"
]
